--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,16 @@ services:
   - type: web
     name: achados-onco-dashboard
     env: python
-    plan: free
+    plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: streamlit run dashboard_onco_render.py --server.address 0.0.0.0 --server.port $PORT --server.headless true
+    disk:
+      name: onco-data
+      mountPath: /var/data
+      sizeGB: 1
     envVars:
+      - key: DB_PATH
+        value: /var/data/tumor_findings_patients.db
       - key: PYTHON_VERSION
         value: 3.11.11
       - key: STREAMLIT_SERVER_ENABLE_CORS
