--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,11 @@ services:
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run dashboard_onco_render.py --server.address 0.0.0.0 --server.port $PORT --server.headless true
+    startCommand: >
+      sh -c 'if [ ! -f /var/data/tumor_findings_patients.db ]; then
+      if [ -f ./tumor_findings_patients.db ]; then cp ./tumor_findings_patients.db /var/data/tumor_findings_patients.db;
+      elif [ -f ../tumor_findings_patients.db ]; then cp ../tumor_findings_patients.db /var/data/tumor_findings_patients.db; fi; fi;
+      streamlit run dashboard_onco_render.py --server.address 0.0.0.0 --server.port $PORT --server.headless true'
     disk:
       name: onco-data
       mountPath: /var/data
